--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,7 @@ a.navbar-brand:hover{
     background-size: contain;
     height: 30vh;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .card-image{
@@ -341,9 +342,8 @@ a.navbar-brand:hover{
     padding: 0;
 }
 
-.contact-info-item.btn{
-    /* text-align: center; */
-    /* display: inline; */
+.contact-info{
+    margin-bottom: 20px;
 }
 
 
@@ -432,7 +432,7 @@ iframe{
   .social-networks { display: none; }
  } */
  @media screen and (min-width: 768px)and (max-width:1920px){
-     .nav-item-home{size 1rem;}
+     .nav-item-home{display: none}
 }
 
  @media screen and (min-width: 0px) and (max-width: 568px){
