--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ a.navbar-brand:hover{
     background-size: contain;
     height: 30vh;
     margin-top: 60px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .card-image{
@@ -327,37 +327,35 @@ a.navbar-brand:hover{
 .form-box h1{
     text-align: center;
     font-family: inherit;
-    /* font-size: 1.5rem; */
-    margin-top: 2rem;
+    margin-top: 0.3rem;
 }
 
 .form-box{
     width: 100%;
 }
 
-/* .contact-map{
-    border: #6c757d 1px solid;
-    border-radius: 5px;
-    width:100%; 
-    height:400px; 
-    padding: 0;
-} */
-
 .contact-map-wrapper{
-    width: 80%;
+    width: 90%;
     height: 350px;
     /* padding:20px; */
     border-radius: 8px;
     border:  #6c757d 1px solid;
-    margin-left: 7.5rem;
-    margin-top: 1.8rem;
-    
+    margin-left: 4rem;
+    margin-top: 1.9rem;
 }
 
 .contact-info{
     margin-bottom: 20px;
+    font-size: 1.5rem;
 }
 
+.contact-info-box{
+    margin:0;
+}
+
+.contact-info-button{
+    color: black;
+}
 /*-------------------------------------------------------------------IFRAMES*/
 
 iframe{
