--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,14 +61,13 @@ a.navbar-brand:hover{
 }
 
 .navbar-nav a:hover{
-    /* border-bottom: 1px solid #fff; */
     color: #fff;
 }
 .navbar-toggler-icon{
     margin-left: auto;
     }
 
-    /*-------------------------------------------------------------------------SCROLLspy*/
+/*-------------------------------------------------------------------------SCROLLSPY*/
 
 #contact{
     padding: 0px;
@@ -142,7 +141,6 @@ a.navbar-brand:hover{
     background-size: contain;
     height: 30vh;
     margin-top: 60px;
-    /* margin-bottom: 10px; */
 }
 
 .card-image{
@@ -157,10 +155,9 @@ a.navbar-brand:hover{
     padding: 1.5rem;
 }
 
-.card-text{
+/* .card-text{
     text-align: none;
-    /* color: red; */
-}
+} */
 
 .card{
     border: none;
@@ -171,12 +168,8 @@ a.navbar-brand:hover{
 }
 
 .cards-tech{
-    /* margin-bottom: 1rem; */
      z-index: -1;
 }
-/* .cards-agile{
-    margin-bottom: 30px;
-} */
 
 .cards-content{
     margin-bottom: 3rem;
@@ -198,12 +191,6 @@ a.navbar-brand:hover{
     letter-spacing: 5px;
 }
 
-/* .landing-content p{
-    text-indent: 50px; 
-    text-align: justify; 
-    letter-spacing: 2px;
-} */
-
 .landing-content p i:hover{
     color: #303030;
 }
@@ -215,7 +202,6 @@ a.navbar-brand:hover{
 /*-------------------------------------------------------------------PROGRESS SKILLS*/
 
 .skillbar{
-    /* position: relative; */
     display: block;
     width: 100%;
     margin-bottom: 10px;
@@ -243,7 +229,6 @@ a.navbar-brand:hover{
   color: #303030;
   font-size: 11px;
   font-weight: 600;
-  /* text-transform: uppercase; */
   display: inline-block;
 }
 
@@ -255,29 +240,6 @@ a.navbar-brand:hover{
   font-weight: 600;
   text-transform: uppercase;
 }
-
-/* old previous */
-/* .progress-skills{
-    margin-bottom: 48px;
-    margin-top: 5rem;
-     z-index: -1;
-}
-.progress{
-    background-color: #343a40;
-    height: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.progress-bar{
-    background-color: #D4CECE;
-    color: black;
-    transition: width 2s;
-}
-
-.progress-type{
-    color: #fff;
-    text-align: right;
-} */
 
 /*-------------------------------------------------------------------TYPEWRITER*/
 
@@ -345,10 +307,8 @@ a.navbar-brand:hover{
 .contact-map-wrapper{
     width: 100%;
     height: 350px;
-    /* padding:20px; */
     border-radius: 8px;
     border:  #6c757d 1px solid;
-    /* margin-left: 4rem;*/
     margin-top: 1.9rem;
 }
 
@@ -431,12 +391,11 @@ iframe{
     .btn-outline-secondary{font-size: 0.8rem;}
     .landing-image{margin-top: auto;}
     .card-text{font-size: 0.8rem;}
-    .card-title{font-size: 1.1rem; margin-top: 20px; text-align: none;}
+    .card-title{font-size: 1.1rem; margin-top: 20px;}
     .card-content-top{margin-bottom: 0;}
     .card-wrapper-tech{margin-top:0;  margin-bottom: 0;}
     #tech{padding-top: 0;}
     .cards-content{margin: 0;}
-    /* .landing-content-item{margin-bottom: 1rem;} */
     .backend-image{margin-bottom: 20px;}
     .agile-image{margin-top: 1rem; margin-bottom: 2rem;}
     .card-body{margin-top: 0; margin-bottom: 0; padding-top: 0;}
@@ -457,7 +416,6 @@ iframe{
   .navbar-brand { display: none; }
   .copy-right{ display: none; }
   .navbar-toggler-icon{margin-left: auto;}
-  /* .list-inline li i {display: none;} */
   .nav-item{text-align: right;}
   .navbar-nav{margin-right: 0;}
   .contact-map {display: none;}
@@ -477,9 +435,8 @@ iframe{
      .card-text{font-size: 1.3rem;}
     .btn-outline-secondary{font-size: 1rem;}
     .landing-image{margin-top: 170px;}
-   /* .tech-image{display: block;} */
     .card-content-top{margin-bottom: 2rem;}
-    .card-title{font-size: 1.1rem; margin-top: 20px; text-align: none;}
+    .card-title{font-size: 1.1rem; margin-top: 20px;}
     .navbar-nav{ margin-right: auto;}
     .card-wrapper-tech{margin-top:2rem;  margin-bottom: 0;}
     #tech{padding-top: 1rem;}
@@ -490,7 +447,6 @@ iframe{
     .card-body{margin-top: 0; margin-bottom: 0; padding-top: 0;}
     .contact-image{margin-top: 15px; margin-bottom: 20px;}
     .contact-info-box h1{ font-size: 2rem !important;}
-    .contact-map {display: auto;}
     .title-contact-form h4{ margin-top: 0.8rem;}
     .list-inline li i{font-size: 1rem;}
 }
@@ -498,4 +454,3 @@ iframe{
  @media screen and (min-width: 1024px)and (max-width:1920px){
      .nav-item-home{display: none}
 }
-
