--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ a.navbar-brand:hover{
 .typewriter h1{
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   position: relative;
-  /* height: 2rem; */
+  height: 2rem;
   font-family: 'Press Start 2P', cursive;
   font-size: 1.2rem;
   border-right: .15em solid black; /* The typwriter cursor */
@@ -265,7 +265,7 @@ a.navbar-brand:hover{
   padding: 0 10px 0 10px;
   letter-spacing: .10em; /* Adjust as needed */
   animation: 
-    typing 10s steps(30,end) 1s 1 normal both, 
+    typing 16s steps(30,end) 1s 1 normal both, 
     blink-caret .75s steps(30,end) infinite;
   animation-iteration-count: infinite;
 }
@@ -273,13 +273,13 @@ a.navbar-brand:hover{
 /* The typing effect */
 @keyframes typing{
   from { width: 0 }
-  to { width: 41% }
+  to { width: 55% }
 }
 
-@keyframes typing{
+/* @keyframes typing{
   from { width: 0 }
-  to { width: 41% }
-}
+  to { width: 55% }
+} */
 
 /* The typewriter cursor effect
 @keyframes blink-caret{
@@ -379,12 +379,22 @@ iframe{
 
 @media screen and (max-width: 320px){
   .typewriter{float: none; margin: 0 auto;}
-  .typewriter h1{font-size: 0.8rem; margin-bottom: 15px;}
+  .typewriter h1{font-size: 0.6rem; margin-bottom: 15px; 
+  animation: 
+    typing 4s steps(22,end) 1s 1 normal both, 
+    blink-caret .75s steps(30,end) infinite;
+  animation-iteration-count: infinite;
+  letter-spacing: pre; /* Adjust as needed */
+  border-right: .2em solid black; /* The typwriter cursor */
+  height: 1rem;
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin-left: auto;
+  margin-right: auto;}
 
-@keyframes typing{
+/* @keyframes typing{
   from { width: 0 }
   to { width: 100% }
-    }
+    } */
 
     .navbar-brand{font-size: 1.8rem; margin-left: 0.5rem; padding-left: 0.5rem;}
     .nav-item a{font-size: 0.8rem;}
