--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,12 +443,13 @@ iframe{
     .contact-map {display: none;}
     .navbar-nav a:hover{border-bottom: none;}
     .card-content-top{margin-bottom: 2rem;}
+    .tech-image{display:none;}
 }
 
 @media screen and (min-width: 568px) and (max-width: 768px){
     .navbar-brand { font-size: 2rem; margin-left: 0.5rem; padding-left: 0.3rem;}
-    .navbar-nav{ margin-right: auto;
-}
+    .navbar-nav{ margin-right: auto;}
+    .card-wrapper-tech{margin-top:2.5rem;}
 }
  @media screen and (min-width: 768px)and (max-width:1024px){
     .navbar-brand{font-size: 2.5rem; margin-left: 0.8rem; padding-left: 0.7rem;}
@@ -460,7 +461,7 @@ iframe{
     .card-content-top{margin-bottom: 2rem;}
     .card-title{font-size: 1.1rem; margin-top: 20px;}
     .navbar-nav{ margin-right: auto;}
-    .card-wrapper-tech{margin-top:2rem;  margin-bottom: 0;}
+    .card-wrapper-tech{margin-top:2.5rem;  margin-bottom: 0;}
     #tech{padding-top: 1rem;}
     .cards-content{margin: 0;}
     .landing-content{margin-top: 1rem;}
